fixed scrollbar and added back button

--- a/resource/style/global.css
+++ b/resource/style/global.css
@@ -86,33 +86,7 @@ body
 {
 	width:320px;
 }
-.navHolder ul
-{
-	width:100%;
-	background-color: #333;
-	height: auto;
-}
-.navHolder ul li{
-	width:24%;
-	text-align: center;
-	background-color: #333;
-	color:#E4E4E4;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	margin-right: 1%;
-	float: left;
-	
-}
-.navHolder ul li.last
-{
-	margin-right: 0;
-	width:25%;
-}
-.navHolder ul li:active
-{
-	background-color: #E4E4E4;
-	color:#333;
-}
+
 .bar{
 	width:200px;
 	min-height: 2px;
@@ -276,4 +250,36 @@ width: 56px;
 height: 35px;
 float:left;
 margin-right: 10px;
+cursor: pointer;
+}
+.smallRemoveButton {
+background-image: url(../image/remove_button.png);
+width: 56px;
+height: 35px;
+float:left;
+margin-right: 10px;
+cursor: pointer;
+}
+.backButton
+{
+	position:absolute;
+	top: 5px;
+	left:5px;
+	cursor: pointer;
+}
+.backArrow {
+background: url(../image/backarrow.png) no-repeat ;
+width: 13px;
+height: 30px;
+cursor: pointer;
+float: left;
+}
+.backText
+{
+	background:#6d97c6;
+	color:#fff;
+	float: left;
+	height: 25px;
+	padding-top:5px;
+	padding-right:10px;
 }
